--- a/src/styles/styleAccess.css
+++ b/src/styles/styleAccess.css
@@ -38,7 +38,7 @@ li,
   justify-content: space-between;
   text-align: center;
   margin-left: 2%;
-  margin-top: 1%;
+  margin-top: 2%;
   margin-right: 2%;
 }
 
@@ -56,6 +56,7 @@ li,
 
 .main-content {
   padding: 1%;
+  padding-top: 2%;
 }
 
 #hero-title, 
@@ -80,6 +81,10 @@ li,
   padding-right: 6%;
 }
 
+.feature-title{
+  padding-bottom: 4%;
+}
+
 .menu-contact,
 .logo{
   padding-right: 20%;
@@ -97,7 +102,7 @@ li,
   display: block;
   border-radius: 3%;
   margin-right: 3%;
-  margin-top: 2%;
+  margin-top: 12%;
 }
 
 .number{
@@ -112,9 +117,17 @@ li,
   margin-left: 1%;
 }
 
+.button-allbooks,
+.image-email,
+.title-suscribe,
+.featured,
+#email-input {
+  margin-top: 2%;
+}
+
 .book-detail {
   position: absolute;
-  top: 81%;
+  top: 84%;
   
   background-color: rgba(255, 255, 255, 0.8);
   padding: 3% 5%;
@@ -136,11 +149,13 @@ text-align: start;
 .footer-help,
 .footer-legal {
   text-align: start;
-  margin-left: 9%;
+  margin-left: 8%;
 }
 
 .footer-li{
   margin: 2% 0%;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 .footer-help{
