--- a/src/styles/styleAccess.css
+++ b/src/styles/styleAccess.css
@@ -18,7 +18,6 @@ a {
 /* HEADER*/
 .header__nav {
   display: flex;
-  justify-content: center;
   text-align: center;
   margin-top: 0.4%;
 }
@@ -35,12 +34,33 @@ a {
 
 /* Elementos del menú (heredado de li margin) */
 .header__item {
-  margin: 1% 1.2%;
+  margin: 1% 0.8%;
 }
 
 .header__icon-btn {
   padding-top: 1%;
-  padding-right: 1%;
+  padding-left: 1%;
+
+}
+
+
+
+.header__icon-btn--search{
+    padding-top: 1%;
+    margin-right: -6%;
+    margin-top: -1%;
+}
+
+.header__icon-btn--profile {
+ padding-top: 1%;
+ margin-left: 30%;
+
+}
+
+.header__icon-btn--logo {
+ padding-top: 0.5%;
+  padding-left: 2%;
+
 }
 
 .header__icon-btn--cart {
@@ -221,22 +241,19 @@ a {
   padding: 1% 2% 1% 2%;
   background: #000;
   color: #fafafa;
-  margin-top: 4%;
-  margin-left: 45%;
-  display: inline-flex; /* Fix para centrado */
+  display: inline-flex; 
 }
 
 .btn--subscribe {
   background: #fafafa;
-  border: 1px solid #ddd; /* Agregado borde sutil si es necesario */
+  margin: -3.2% 34% 0% 54%;
   padding: 1% 3% 1% 3%;
-  margin: -3% 1% 2% 54%;
+  border: 0.15rem solid #000;
 }
 
 /* NEWSLETTER */
 .newsletter {
   background: rgba(255, 251, 235, 0.75);
-  margin-top: 4%; 
   text-align: center;
   padding: 2%; 
 }
@@ -267,10 +284,17 @@ a {
 }
 
 .newsletter__input {
-  border-radius: 1rem;
-  padding: 1% 8% 1% 1%;
-  margin: 2% 16% 0% 0%;
-  margin-top: 2%;
+    border-radius: 1rem;
+    padding: 1% 8% 1% 1%;
+    margin: 2% 50% 0% 28%;
+    margin-top: 2%;
+}
+
+.newsletter__input--search {
+    border-radius: 1rem;
+    padding: 8% 8% 10% 48%;
+    margin: 0% 0% 8% 20%;
+    margin-top: 0%;
 }
 
 /* FOOTER */
